--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ header {
     left: 0;
     right: 0;
     display: flex;
-    background-color: £242526;
+    background-color: #242526;
 }
 
 .links a {
